# project-template

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.md.advanced  CLAUDE.md.lightweight  CLAUDE.md.standard  CONTRIBUTING.md  HANDOFF-R6-8708193.md  README.md  SECURITY.md  init.sh  lychee.toml  renovate.json
.claude/: settings.json
.claude/scaffolds/backup/: restic-T1.md  restic-T2.md  restic-T3.md
.claude/scaffolds/orchestrator/: CLAUDE.md  Makefile  README.md  pyproject.toml  registry.yml  render.py
.claude/scaffolds/orchestrator/docs/runbooks/: orchestrator-reconcile.md
.claude/scaffolds/orchestrator/docs/specs/: orchestrator-design.md
.claude/scaffolds/orchestrator/module/: __init__.py  __main__.py  orchestrator.py
.claude/scaffolds/orchestrator/module/lib/: __init__.py  client.py  registry.py  state_diff.py
.claude/scaffolds/orchestrator/tests/: test_client.py  test_registry.py  test_state_diff.py
.claude/scaffolds/orchestrator/workflows/: ci.yml
.github/: FUNDING.yml  renovate.json
.github/workflows/: ci-fullstack.yml  ci-node-docker.yml  ci-node.yml  ci-python-docker.yml  ci-python.yml  cosign-sign-image.yml  docs-design-check.yml  renovate.yml  trivy.yml
.gitignore-templates/: apps-script.gitignore  fullstack.gitignore  node.gitignore  python.gitignore
docker-templates/: README.md  nextjs-standalone.Dockerfile  node-alpine.Dockerfile  python.Dockerfile
docs/: capacity-posture-checklist.md
